// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TerminalDialog > Button > Renders the component 1`] = `
"<div><button type=\\"button\\" class=\\"v-btn v-btn--disabled v-theme--light text-normal v-btn--density-comfortable v-btn--size-default v-btn--variant-outlined\\" disabled=\\"\\" data-test=\\"connect-btn\\"><span class=\\"v-btn__overlay\\"></span><span class=\\"v-btn__underlay\\"></span>
    <!----><span class=\\"v-btn__content\\" data-no-activator=\\"\\">Offline</span>
    <!---->
    <!---->
  </button>
  <!---->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`TerminalDialog > Dialog opened > Renders the component 1`] = `
"<div><button type=\\"button\\" class=\\"v-btn v-btn--disabled v-theme--light text-normal v-btn--density-comfortable v-btn--size-default v-btn--variant-outlined\\" disabled=\\"\\" data-test=\\"connect-btn\\"><span class=\\"v-btn__overlay\\"></span><span class=\\"v-btn__underlay\\"></span>
    <!----><span class=\\"v-btn__content\\" data-no-activator=\\"\\">Offline</span>
    <!---->
    <!---->
  </button>
  <!---->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`TerminalDialog > Icon > Renders the component 1`] = `
"<div>
  <!--v-if-->
  <!---->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;
